--- a/index.html
+++ b/index.html
@@ -3,29 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="./assets/inflectionORG.webp"
+      type="image/x-icon"
+    />
     <title>Institute Pamphlet</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="bg-black text-white">
+    <div
+      class="fixed top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"
+    ></div>
     <!-- header -->
-
-    <div class="flex justify-around items-center py-1.5 md:py-6 border-b-[1px]">
-      <!-- logo sec -->
-
-      <div class="flex justify-center items-center gap-2">
-        <img class="h-[40px] md:h-[60px]" src="./assets/inflectionORG.webp" />
-
-        <div>
-          <p class="md:text-2xl">Inflection Org Pvt Ltd</p>
-          <p class="text-[8px] md:text-sm">
-            Empowering Education & Self-Employment
-          </p>
-        </div>
-      </div>
+    <header
+      class="w-full md:max-w-3xl fixed top-0 md:top-5 left-[50%] translate-x-[-50%] px-5 flex justify-between gap-5 items-center md:rounded-full bg-transparent border-b md:border border-gray-500/80 h-16 backdrop-blur-md"
+    >
+      <img class="h-12" src="./assets/inflectionORG.webp" />
+      <!-- <img
+        class="h-[40px] md:h-[60px]"
+        src="./assets/inflectionLogoAndTagline.png"
+      /> -->
 
       <!-- menu sec -->
 
-      <div class="hidden text-2xl md:flex items-center gap-16">
+      <div class="hidden md:flex items-center gap-5">
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Services</a>
@@ -34,41 +42,59 @@
 
       <!-- button -->
 
-      <button class="hidden md:block px-8 py-3 bg-amber-700 rounded-full">
-        My Account
+      <button class="hidden md:block px-5 py-1.5 bg-amber-700 rounded-md">
+        Register Now
       </button>
-    </div>
+    </header>
 
-    <!-- title -->
+    <!-- Main Hero Section -->
 
-    <div
-      class="mx-auto mt-16 mb-10 flex justify-center text-2xl md:text-6xl items-center gap-3"
+    <section
+      class="container mx-auto max-w-[1440px] px-16 mt-24 h-[60vh] flex justify-center items-center"
     >
-      <span class="text-amber-700 font-bold">Learn to use</span>
-      <span class="underline font-bold">Programing</span>
-
-      <!-- <div class="p-1 bg-white rounded-full">
-        <img class="h-[50px]" src="./assets/react-logo.png" />
-      </div> -->
-    </div>
-
-    <p
-      class="text-center hidden md:block text-sm md:text-2xl font-semibold mt-5"
-    >
-      Lorem ipsum dolor
-      <mark class="bg-amber-700"> sit amet consectetur adipisicing</mark>
-      elit. Ex esse ab praesentium fuga doloribus suscipit eos a enim cum et.
-    </p>
-
-    <p class="text-center hidden md:block text-sm md:text-2xl font-semibold">
-      Lorem ipsum dolor sit elit. Ex esse ab doloribus
-      <mark class="bg-amber-700">amet consectetur adipisicing</mark> suscipit
-      eos a enim cum et.
-    </p>
-
-    <p class="text-center hidden md:block text-sm md:text-2xl font-semibold">
-      Lorem ipsum dolor sit amet.
-    </p>
+      <div class="text-center">
+        <p
+          class="px-5 py-1.5 bg-neutral-950/50 my-10 inline-block border border-gray-500/80 rounded-full"
+        >
+          Build Your<span class="text-amber-700 font-semibold"> Future🚀</span>
+          with Us!
+        </p>
+        <p class="text-center text-2xl md:text-5xl font-bold">
+          Master<span class="text-amber-700"> Programming</span> &<span
+            class="text-amber-700"
+          >
+            Electronics</span
+          >
+        </p>
+        <div class="flex justify-center mt-5">
+          <div class="md:max-w-5xl text-center">
+            <p class="text-center text-sm md:text-xl">
+              Learn<span class="text-amber-700 font-semibold">
+                Web Development</span
+              >, App Development, IoT, and More from
+              <span class="text-amber-700 font-semibold">Industry Experts</span
+              >. Gain hands-on
+              <span class="text-amber-700 font-semibold">Experience</span> and
+              start your<span class="text-amber-700 font-semibold">
+                Tech Journey 🚀</span
+              >today!
+            </p>
+            <div class="flex gap-5 justify-center mt-5">
+              <button
+                class="px-4 md:px-8 py-1.5 border-2 text-nowrap border-amber-700 rounded-md"
+              >
+                Explore More
+              </button>
+              <button
+                class="px-4 md:px-8 py-1.5 text-nowrap bg-amber-700 rounded-md"
+              >
+                Register Now
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!--  -->
 
@@ -157,8 +183,11 @@
 
       <div class="h-[100%] w-[95%] md:w-[60%]">
         <div
-          class="md:h-[30%] w-[100%] grid grid-cols-2 gap-2 md:flex md:flex-wrap justify-center items-center md:gap-3 bg-[#8b878739] text-sm md:text-2xl rounded-2xl"
+          class="md:h-[30%] w-[100%] grid grid-cols-2 gap-2 md:flex md:flex-wrap justify-center items-center md:gap-3 text-sm md:text-2xl rounded-2xl"
         >
+          <!-- <div
+          class="md:h-[30%] w-[100%] grid grid-cols-2 gap-2 md:flex md:flex-wrap justify-center items-center md:gap-3 bg-[#8b878739] text-sm md:text-2xl rounded-2xl"
+        > -->
           <!-- 1 -->
           <div
             class="flex items-center gap-3 p-2 md:py-4 md:px-4 md:w-[45%] bg-black rounded-xl"
