--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Institute Pamphlet</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script src="app.js" defer></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
@@ -114,7 +115,7 @@
           />
         </svg>
 
-        <span>Lorem ipsum dolor sit amet consectetur.</span>
+        <span>Expert Mentorship.</span>
       </div>
 
       <div class="flex items-center justify-center">
@@ -132,9 +133,7 @@
           />
         </svg>
 
-        <span
-          >Lorem ipsum dolor sit Lorem ipsum dolor sit amet consectetur..</span
-        >
+        <span> Internship & Placement Support .</span>
       </div>
 
       <div class="flex items-center justify-center">
@@ -152,7 +151,7 @@
           />
         </svg>
 
-        <span>Lorem ipsum dolor sit amet consectetur.</span>
+        <span>Certification & Placement Assistance.</span>
       </div>
 
       <div class="flex items-center justify-center">
@@ -170,7 +169,7 @@
           />
         </svg>
 
-        <span>Lorem ipsum dolor sit.</span>
+        <span>Full-Stack & IoT Integration.</span>
       </div>
     </div>
 
@@ -275,9 +274,9 @@
 
         <div class="grid gap-4 pt-10">
           <!-- 1 prg -->
-          <div class="flex items-center gap-3 md:text-2xl font-semibold px-2">
+          <div class="flex items-center gap-3 md:text-xl font-semibold px-2">
             <div
-              class="bg-white h-[30px] min-w-[30px] flex justify-center items-center rounded-full"
+              class="bg-amber-700 h-[30px] min-w-[30px] flex justify-center items-center rounded-full"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -295,17 +294,15 @@
               </svg>
             </div>
             <p>
-              Lorem ipsum dolor
-              <span class="text-amber-700">sit amet consectetur</span>,
-              adipisicing elit. Voluptate, sed!
+              Industry-Oriented Curriculum - Learn what top companies demand
             </p>
           </div>
 
           <!-- 2nd prg -->
 
-          <div class="flex items-center gap-3 md:text-2xl font-semibold px-2">
+          <div class="flex items-center gap-3 md:text-xl font-semibold px-2">
             <div
-              class="bg-white h-[30px] min-w-[30px] flex justify-center items-center rounded-full"
+              class="bg-amber-700 h-[30px] min-w-[30px] flex justify-center items-center rounded-full"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -323,16 +320,15 @@
               </svg>
             </div>
             <p>
-              Lorem <span class="text-amber-700">ipsum dolor</span> sit amet
-              consectetur, adipisicing elit.
+              Project-Based Learning - Build practical skills with every lesson.
             </p>
           </div>
 
           <!-- 3rd prg -->
 
-          <div class="flex items-center gap-3 md:text-2xl font-semibold px-2">
+          <div class="flex items-center gap-3 md:text-xl font-semibold px-2">
             <div
-              class="bg-white h-[30px] min-w-[30px] flex justify-center items-center rounded-full"
+              class="bg-amber-700 h-[30px] min-w-[30px] flex justify-center items-center rounded-full"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -349,17 +345,14 @@
                 />
               </svg>
             </div>
-            <p>
-              Lorem ipsum dolor , adipisicing elit.
-              <span class="text-amber-700">oluptate</span>, sed!
-            </p>
+            <p>One-on-One Doubt Support - Get personalized guidance.</p>
           </div>
 
           <!-- 4rth prg -->
 
-          <div class="flex items-center gap-3 md:text-2xl font-semibold px-2">
+          <div class="flex items-center gap-3 md:text-xl font-semibold px-2">
             <div
-              class="bg-white h-[30px] min-w-[30px] flex justify-center items-center rounded-full"
+              class="bg-amber-700 h-[30px] min-w-[30px] flex justify-center items-center rounded-full"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -377,16 +370,15 @@
               </svg>
             </div>
             <p>
-              <span class="text-amber-700">Lorem ipsum dolor sit amet</span>
-              consectetur, adipisicing elit. Voluptate, sed!
+              Internship & Placement Support - Get job-ready with our network.
             </p>
           </div>
 
           <!-- 5 th prg -->
 
-          <div class="flex items-center gap-3 md:text-2xl font-semibold px-2">
+          <div class="flex items-center gap-3 md:text-xl font-semibold px-2">
             <div
-              class="bg-white h-[30px] min-w-[30px] flex justify-center items-center rounded-full"
+              class="bg-amber-700 h-[30px] min-w-[30px] flex justify-center items-center rounded-full"
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -403,22 +395,34 @@
                 />
               </svg>
             </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur,
-              <span class="text-amber-700">dipisicing</span>a elit. Voluptate,
-              sed!
-            </p>
+            <p>Certification for Every Course - Validate your skills.</p>
           </div>
         </div>
       </div>
 
       <!-- right sec -->
 
-      <div class="h-[100%] w-[95%] md:w-[40%] flex justify-end">
+      <div
+        id="img-con"
+        class="h-[100%] w-[95%] md:w-[40%] flex justify-center border relative z-[-1] overflow-hidden"
+      >
         <img
           class="h-[95%] rounded-2xl"
           src="./assets/institute-building.jpeg"
         />
+
+        <div class="absolute flex gap-10 bottom-8">
+          <button
+            class="px-4 py-2 bg-[#706c6c70] border-[0.5px] border-[#ffffff6b] rounded-sm"
+          >
+            <
+          </button>
+          <button
+            class="px-4 py-2 bg-[#706c6c70] border-[0.5px] border-[#ffffff6b] rounded-sm"
+          >
+            >
+          </button>
+        </div>
       </div>
     </div>
 
